Published artifact to Maven Central and changed representation of NodeID to Base64